--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ python = "^3.8"
 prompt = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.8.3"
+autopep8 = "^1.5.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
